--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat. Donec
-                        eu vehicula neque. Donec viverra lorem nunc, tempus euismod eros sollicitudin ut. Quisque et tincidunt libero. Donec id pharetra justo. Proin euismod lacinia dolor, eu scelerisque justo tempus pharetra. Vivamus nunc justo, finibus
-                        ut nisl sed, euismod rhoncus nulla. Proin sed magna egestas, egestas ante et, congue eros. In consequat, mauris dapibus tincidunt suscipit, ex libero aliquet diam, at maximus risus enim non leo.
+                        Experienced Game/App Developer and Tutor of Game Development(Unity 3D) with a demonstrated history of working in the computer software industry. Skilled in Game Development and Game Design, C#, Social Game Development, Mobile Applications, and Mobile Games. Strong engineering professional with a Engineer's degree focused in Informatics from UNINP - Informatics Sciences & Software Engineering.
                     </p>
                 </div>
             </div>
