--- a/index.html
+++ b/index.html
@@ -85,26 +85,26 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>SticknRope</h3>
+                <h4>Game Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    SticknRope is a Game Development firm from Serbia-Novi Sad. I was part of it for half a year as a junior game developer of RPG games.
                 </p>
             </div>
 
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>Awesome Tuts</h3>
+                <h4>Tutor of Game Developer</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                    Awesome Tuts is an online company for teaching Game Development in general. A Youtube channel with 100k subscribers and other platforms for tutorials and courses are the main goals for this company.
                 </p>
             </div>
 
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>Udemy</h3>
+                <h4>Udemy Instructor(Unity)</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                     Udemy is an online learning and teaching marketplace with over 204000 courses and 54 million students. Udemy, Inc. is a for-profit massive open online course provider aimed at professional adults and students.
                 </p>
             </div>
         </div>
@@ -114,34 +114,15 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
+            <h3>International University in Novi Pazar</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h4>Software Engineering</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                The International University in Novi Pazar was created on the ground of centuries of meeting and permeation of various peoples and cultures. It was founded in 2002, as an endowment (waquf), with the aim of making education and the constant pursuit of knowledge the best and most recognizable brands of this climate. This higher education institution was among the first in our country to design a study system based on the model of Western European countries. Such intentions of the founders - endowers or wakifs - were confirmed first of all by cooperation with numerous reputable universities in the country and abroad, with the possibility of implementing student exchange programs.
             </p>
         </div>
         <!-- End .education-block -->
 
-        <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-                <li>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
-    </div>
-    <!-- End #education -->
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
@@ -186,32 +167,22 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
-            <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
             <li>Java</li>
-            <li>C</li>
             <li>C#</li>
+            <li>Dart</li>
+            <li>Swift</li>
             <li>C++</li>
-            <li>Ruby on Rails</li>
+	    <li>Kotlin</li>
             <li>JavaScript</li>
-            <li>Python</li>
-            <li>Ruby</li>
-            <li>Go</li>
-            <li>Node.js</li>
-            <li>AngularJs</li>
-            <li>React</li>
-            <li>Elixir</li>
-            <li>Java</li>
             <li>C</li>
-            <li>C#</li>
-            <li>C++</li>
-            <li>Ruby on Rails</li>
+            <li>Unity</li>
+            <li>.Net</li>
+            <li>Andorid Studio</li>
+            <li>Flutter</li>
+            <li>Visual Studio Code</li>
+            <li>Xcode</li>
+            <li>NetBeans</li>
+            
         </ul>
     </div>
     <!-- End #skills -->
@@ -235,7 +206,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; <span id="current-year">2022</span> YOUR NAME
+                        Copyright &copy; <span id="current-year">2022</span> Mervan Dazdarevic
                     </p>
                 </div>
                 <div class="col-sm-2 top">
