--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
+            <div data-date="March 2022 – August 2022">
                 <h3>SticknRope</h3>
                 <h4>Game Developer</h4>
                 <p>
@@ -92,7 +92,7 @@
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="September 2017 – January 2018">
                 <h3>Awesome Tuts</h3>
                 <h4>Tutor of Game Developer</h4>
                 <p>
@@ -100,7 +100,7 @@
                 </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
+            <div data-date="February 2018 – September 2019">
                 <h3>Udemy</h3>
                 <h4>Udemy Instructor(Unity)</h4>
                 <p>
@@ -115,7 +115,7 @@
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>International University in Novi Pazar</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <span class="education-date">Sept 2017 - Sept 2021</span>
             <h4>Software Engineering</h4>
             <p>
                 The International University in Novi Pazar was created on the ground of centuries of meeting and permeation of various peoples and cultures. It was founded in 2002, as an endowment (waquf), with the aim of making education and the constant pursuit of knowledge the best and most recognizable brands of this climate. This higher education institution was among the first in our country to design a study system based on the model of Western European countries. Such intentions of the founders - endowers or wakifs - were confirmed first of all by cooperation with numerous reputable universities in the country and abroad, with the possibility of implementing student exchange programs.
@@ -175,6 +175,8 @@
 	    <li>Kotlin</li>
             <li>JavaScript</li>
             <li>C</li>
+	    <li>HTML</li>
+	    <li>CSS</li>
             <li>Unity</li>
             <li>.Net</li>
             <li>Andorid Studio</li>
@@ -182,6 +184,9 @@
             <li>Visual Studio Code</li>
             <li>Xcode</li>
             <li>NetBeans</li>
+            <li>Wordpress</li>
+	    <li>Elementor</li>
+	    
             
         </ul>
     </div>
