--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <h3>Native Camp</h3>
                 <h4>Online English Teacher</h4>
                 <p>
-                    Native Camp provides full flexibility and many benefits to their teachers and students along with easy-to-use platform for online English lessons.
+                    Native Camp is a legitimate online ESL company, founded in Tokyo in 2015. They are one of the largest online English language schools in Japan.
                 </p>
             </div>
         </div>
