--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Tiger Attack Project</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Tiger Attack project is one of the first more serious and bigger projects than before. It is about the head of a tiger(which is a player) who needs to kill all of the fox enemies all over some level. I made it from scratch with no investment. Then I made a tutorial out of it which you can check on my Udemy course.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://www.youtube.com/watch?v=7d6-K8Xx0KQ&t=399s">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
