--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="C:\Users\samkee\Desktop" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
