--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                             Tiger Attack project is one of the first more serious and bigger projects than before. It is about the head of a tiger(which is a player) who needs to kill all of the fox enemies all over some level. I made it from scratch with no investment. Then I made a tutorial out of it which you can check on my Udemy course.
                         </p>
                         <a href="https://www.youtube.com/watch?v=7d6-K8Xx0KQ&t=399s">View Project</a>
+			<a href="https://github.com/meggipro223/Tiger-Attack-Project">Download Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -158,11 +159,46 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Slipping Penguin Project</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            Slipping Penguin is my first significant project after a lot of tiny projects. In this game, we have a penguin that jumps off from the hill right on the mace of brutal Bigfoot Yeti who tries to kick a falling penguin at the correct time and as stronger as he can. The point in the game is to set up a new high score, which is pretty easy sometimes because the road, where penguin will slip, is covered by a lot of bombs that throw penguin even further! 
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://www.youtube.com/watch?v=7d6-K8Xx0KQ&t=399s">View Project</a>
+			<a href="https://github.com/meggipro223/Slipping-Penguin-Project">Download Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+		    
+		    <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Rider Game Project</h3>
+                        <p>
+                             Rider game as the name says is a game where we are in the role of a rider of a car that has a rough road to go through! The point in the game is to pass all levels of crazy roads that we have in front of us.
+                        </p>
+                        <a href="https://www.youtube.com/watch?v=7d6-K8Xx0KQ&t=399s">View Project</a>
+			<a href="https://github.com/meggipro223/Rider-Game-Project">Download Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+		    
+		    <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>Double Jumper Project</h3>
+                        <p>
+                           Double Jumper project was one of the hardest projects to develop. The game contains a lot of different spawners of the different objects(that kill our players) that need to be spawned in a specific rhythm and by a specific shape and direction. In this game, we have two players that are competing with each other who will survive longer! 
+                        </p>
+                        <a href="https://www.youtube.com/watch?v=7d6-K8Xx0KQ&t=399s">View Project</a>
+			<a href="https://github.com/meggipro223/Double-Jumper-Project">Download Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
