--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Mervan Dazdarevic</h1>
             <h2>Software Engineer</h2>
-            <a href="MyGameDevCv2" class="btn-rounded-white">Download Resume</a>
+            <a href="https://drive.google.com/file/d/1HsjG4zyXl_jGI4vSeOaCa0PICj27Itj3/view?usp=sharing" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
