--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="tigerattackpic.png" />
+                        <img src="https://drive.google.com/file/d/1KAOAKIpjNMIomQD6beTeEsIkBfWsh7VK/view?usp=sharing" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
