--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="https://imgur.com/a/zcXydrT" />
+                        <img src="https://i.imgur.com/C0MVX3W.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
