--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="https://i.imgur.com/dnpZdZs.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -174,7 +174,7 @@
 		    
 		    <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="https://i.imgur.com/LRknb02.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -192,7 +192,7 @@
 		    
 		    <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="https://i.imgur.com/pKODe82.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
