--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Mervan Dazdarevic</h1>
             <h2>Software Engineer</h2>
-            <a href="CV - Mervan Dazdarevic.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="CV - Mervan Dazdarevic.zip" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
