--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
         <!-- End #contact-form -->
     </div>
     <!-- End #contact -->
-<form name="contact" method="POST" data-netlify="true">
+<form name="contact" method="POST" Reply-to ="megi1996@live.com">
   <input type="hidden" name="subject" 
   value="Sales inquiry from mysitename.netlify.app" />
   <p>
