--- a/index.html
+++ b/index.html
@@ -249,6 +249,11 @@
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
             </form>
+		<form action="https://formspree.io/f/{form_id}" method="post">
+  <label for="email">megi1996@live.com</label>
+  <input name="Email" id="email" type="email">
+  <button type="submit">Submit</button>
+</form>
         </div>
         <!-- End #contact-form -->
     </div>
