--- a/index.html
+++ b/index.html
@@ -249,11 +249,12 @@
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
             </form>
-		<form action="https://formspree.io/f/{form_id}" method="post">
-  <label for="email">megi1996@live.com</label>
-  <input name="Email" id="email" type="email">
-  <button type="submit">Submit</button>
-</form>
+		<form method="POST" action="https://formspree.io/f/moqydkoe">
+                <input type="hidden" name="_subject" value="Contact request from personal website">
+                <input type="email" name="_replyto" placeholder="Your email" required="">
+                <textarea name="message" placeholder="Your message" required="" spellcheck="false"></textarea>
+                <button type="submit">Send</button>
+            </form>
         </div>
         <!-- End #contact-form -->
     </div>
