--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+9<!DOCTYPE html>
 <html class="no-js" lang="en">
 
 <head>
@@ -249,7 +249,7 @@
                 <textarea name="message" placeholder="Your message" required></textarea>
                 <button type="submit">Send</button>
             </form>
-		<form method="POST" action="https://formspree.io/f/moqydkoe">
+		<form method="POST" action="megi1996@live.com">
                 <input type="hidden" name="_subject" value="Contact request from personal website">
                 <input type="email" name="_replyto" placeholder="Your email" required="">
                 <textarea name="message" placeholder="Your message" required="" spellcheck="false"></textarea>
