--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <div id="contact-form">
 		<form method="POST" action="https://formspree.io/f/moqydkoe">
                 <input type="hidden" name="_subject" value="Contact request from personal website">
-                <input type="email" name="_replyto" placeholder="Your email" required="">
+                <input type="email" name="megi1996@live.com" placeholder="Your email" required="">
                 <textarea name="message" placeholder="Your message" required="" spellcheck="false"></textarea>
                 <button type="submit">Send</button>
             </form>
