--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <div id="contact">
         <h2>Get in Touch</h2>
         <div id="contact-form">
-		<form method="POST" action="https://formspree.io/f/moqydkoe">
+		<form method="POST" action="https://formspree.io/f/xknevdrz">
                 <input type="hidden" name="_subject" value="Contact request from personal website">
                 <input type="email" name="megi1996@live.com" placeholder="Your email" required="">
                 <textarea name="message" placeholder="Your message" required="" spellcheck="false"></textarea>
