--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@
                      Udemy is an online learning and teaching marketplace with over 204000 courses and 54 million students. Udemy, Inc. is a for-profit massive open online course provider aimed at professional adults and students.
                 </p>
             </div>
+
+		<div data-date="April 2022 – August 2023">
+                <h3>Bee Digital</h3>
+                <h4>React Developer</h4>
+                <p>
+                    Bee Digital is a web development company founded in Germany in 2022. The company offers many services including web development services,
+			UI/UX Design services, Business Analytics, E-commerce Development, Search Engine Optimization (SEO), CMS Development.
+                </p>
+            </div>
 		
 		<div data-date="April 2019 – August 2019">
                 <h3>Native Camp</h3>
