--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
                 <h3>Bee Digital</h3>
                 <h4>React Developer</h4>
                 <p>
-                    Bee Digital is a web development company founded in Germany in 2022. The company offers many services including web development services,
-			UI/UX Design services, Business Analytics, E-commerce Development, Search Engine Optimization (SEO), CMS Development.
+                    Bee Digital is a web development company founded in Germany in 2022. The company offers many services including web development services, UI/UX Design services, Business Analytics, E-commerce Development, Search Engine Optimization (SEO), and CMS Development.
                 </p>
             </div>
         </div>
